crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@387.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query_tz(\n\t'[\"2017-03-10 12:34:00+01\", \"2017-03-10 12:35:00+01\", \"2017-03-10 12:36:00+01\", \"2017-03-10 12:35:00+02\", \"2017-03-10 12:35:00-02\", \"2017-03-10 10:35:00\", \"2017-03-10 11:35:00\", \"2017-03-10 12:35:00\", \"2017-03-10\", \"2017-03-11\", \"12:34:56\", \"12:34:56+01\"]',\n\t'$[*].datetime() ? (@ == \"10.03.2017 12:35 +1\".datetime(\"dd.mm.yyyy HH24:MI TZH\"))');"
---
SelectStmt@0..373
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..371
    FuncCall@7..371
      Ident@7..26 "jsonb_path_query_tz"
      Ascii40@26..27 "("
      Newline@27..28 "\n"
      Newline@28..29 "\t"
      AConst@29..285
        Sconst@29..285 "'[\"2017-03-10 12:34:0 ..."
      Ascii44@285..286 ","
      Newline@286..287 "\n"
      Newline@287..288 "\t"
      AConst@288..371
        Sconst@288..371 "'$[*].datetime() ? (@ ..."
  Ascii41@371..372 ")"
  Ascii59@372..373 ";"

