crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@39.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '1' @? '$ ? ((@ == 1) is unknown)';"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..47
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..47
      TypeCast@13..16
        AConst@13..16
          Sconst@13..16 "'1'"
      Whitespace@16..17 " "
      Op@17..19 "@?"
      Whitespace@19..20 " "
      AConst@20..47
        Sconst@20..47 "'$ ? ((@ == 1) is unk ..."
  Ascii59@47..48 ";"

