crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@393.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_query('[{\"a\": 1}, {\"a\": 2}]', '$[*] ? (@.a > 10)');"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..67
    FuncCall@7..67
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..46
        Sconst@24..46 "'[{\"a\": 1}, {\"a\": 2}]'"
      Ascii44@46..47 ","
      Whitespace@47..48 " "
      AConst@48..67
        Sconst@48..67 "'$[*] ? (@.a > 10)'"
  Ascii41@67..68 ")"
  Ascii59@68..69 ";"

