crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@394.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT jsonb_path_query_array('[{\"a\": 1}, {\"a\": 2}, {}]', 'strict $[*].a');"
---
SelectStmt@0..75
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..73
    FuncCall@7..73
      Ident@7..29 "jsonb_path_query_array"
      Ascii40@29..30 "("
      AConst@30..56
        Sconst@30..56 "'[{\"a\": 1}, {\"a\": 2}, ..."
      Ascii44@56..57 ","
      Whitespace@57..58 " "
      AConst@58..73
        Sconst@58..73 "'strict $[*].a'"
  Ascii41@73..74 ")"
  Ascii59@74..75 ";"

